--- a/confluence2020/hap-hd/3Dspectral_analysis_hd.ipynb
+++ b/confluence2020/hap-hd/3Dspectral_analysis_hd.ipynb
@@ -4,25 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3D spectral analysis of HESS J1745-290 (with HAP-fr)"
+    "# 3D spectral analysis of HESS J1745-290 (with HAP-hd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.15'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -34,36 +23,47 @@
     "from astropy.convolution import Tophat2DKernel\n",
     "from regions import CircleSkyRegion, RectangleSkyRegion\n",
     "\n",
-    "from gammapy.detect import compute_lima_on_off_image,compute_lima_image # quelle différence entre les deux ?\n",
+    "from astropy.time import Time\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.18.2'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
     "from gammapy.data import DataStore\n",
-    "from gammapy.irf import make_mean_psf\n",
+    "from gammapy.irf import PSFKernel\n",
     "from gammapy.maps import Map, MapAxis, WcsGeom\n",
-    "from gammapy.cube import (\n",
-    "    MapDatasetMaker,\n",
-    "    PSFKernel,\n",
-    "    MapDataset,\n",
-    "    RingBackgroundMaker,\n",
-    "    SafeMaskMaker,\n",
-    "    #RingBackgroundEstimator,\n",
-    ")\n",
+    "from gammapy.datasets import MapDataset, Datasets\n",
+    "from gammapy.estimators import ExcessMapEstimator\n",
+    "\n",
+    "from gammapy.modeling import Fit\n",
     "from gammapy.modeling.models import (\n",
     "    SkyModel,\n",
-    "    SkyModels,\n",
-    "    BackgroundModel,\n",
+    "    FoVBackgroundModel,\n",
     "    PowerLawSpectralModel,\n",
-    "    PowerLaw2SpectralModel,\n",
     "    PointSpatialModel,\n",
     "    ExpCutoffPowerLawSpectralModel,\n",
-    "    SkyDiffuseCube,\n",
     "    TemplateSpatialModel,\n",
-    "    GaussianSpatialModel\n",
+    "    GaussianSpatialModel,\n",
+    "    Models\n",
     ")\n",
-    "from gammapy.stats import significance, excess # utiles ?\n",
     "\n",
-    "from gammapy.modeling import Fit, Datasets\n",
-    "from astropy.time import Time\n",
-    "\n",
-    "src_pos = SkyCoord(359.94, -0.04, unit=\"deg\", frame=\"galactic\")\n",
+    "#from gammapy.stats import significance, excess # utiles ?\n",
     "\n",
     "import gammapy\n",
     "gammapy.__version__"
@@ -71,12 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
+    "src_pos = SkyCoord(359.94, -0.04, unit=\"deg\", frame=\"galactic\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# General path (to select which analysis/set of data we work with)\n",
     "path = Path(\"../../../../gammapy_data/GC_variability2020/hap-hd\")\n",
     "path.mkdir(exist_ok=True)\n",
@@ -94,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,22 +118,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "create() got an unexpected keyword argument 'coordsys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-d5355f060663>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mcoordsys\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"GAL\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mproj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"CAR\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0maxes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0menergy_axis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m )\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: create() got an unexpected keyword argument 'coordsys'"
+     ]
+    }
+   ],
    "source": [
+    "# pas utile\n",
+    "\n",
     "emin, emax = [0.5, 100] * u.TeV\n",
     "\n",
     "e_bins = 20\n",
     "\n",
-    "energy_axis = MapAxis.from_bounds(\n",
-    "    emin.value, emax.value, e_bins, unit=\"TeV\", name=\"energy\", interp=\"log\"\n",
+    "energy_axis = MapAxis.from_energy_bounds(\n",
+    "    emin.value, emax.value, e_bins, unit=\"TeV\"\n",
     ")\n",
     "geom = WcsGeom.create(\n",
     "    skydir=(0, 0),\n",
     "    binsz=0.02,\n",
     "    width=(10, 8),\n",
-    "    coordsys=\"GAL\",\n",
+    "    frame=\"GAL\",\n",
     "    proj=\"CAR\",\n",
     "    axes=[energy_axis],\n",
     ")\n",
@@ -135,27 +156,39 @@
     "    skydir=(0, 0),\n",
     "    binsz=0.02,\n",
     "    width=(10, 8),\n",
-    "    coordsys=\"GAL\",\n",
+    "    frame=\"GAL\",\n",
     "    proj=\"CAR\",\n",
     ")\n",
     "\n",
     "emintrue, emaxtrue = [0.3,200] * u.TeV\n",
     "e_bins_true = 30\n",
     "\n",
-    "energy_axis_true = MapAxis.from_bounds(\n",
-    "    emintrue.value, emaxtrue.value, e_bins_true, unit=\"TeV\", name=\"energy\", interp=\"log\"\n",
+    "energy_axis_true = MapAxis.from_energy_bounds(\n",
+    "    emintrue.value, emaxtrue.value, e_bins_true, unit=\"TeV\", name=\"energy_true\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'geom' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-8d0523afdc1b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Creating the total dataset (potentially useless)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmapdataset_tot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMapDataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgeom\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgeom\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menergy_axis_true\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menergy_axis_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"mapdatasets/mapdataset_tot.fits.gz\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'geom' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Creating the total dataset (potentially useless)\n",
     "\n",
-    "mapdataset_tot = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
+    "#mapdataset_tot = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
     "\n",
     "filename = \"mapdatasets/mapdataset_tot.fits.gz\"\n",
     "mapdataset_tot = MapDataset.read(path/filename)"
@@ -163,25 +196,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Incorrect energy axis position in input Map",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-eb8e9afc0945>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"mapdatasets/mapdataset_hess1.fits.gz\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmapdataset_hess1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMapDataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"mapdatasets/mapdataset_hess2.fits.gz\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/gammapy-0.18.2/lib/python3.7/site-packages/gammapy/datasets/map.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(cls, filename, name, lazy, cache)\u001b[0m\n\u001b[1;32m   1106\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1107\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mfits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmake_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhdulist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1108\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_hdulist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhdulist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1110\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/gammapy-0.18.2/lib/python3.7/site-packages/gammapy/datasets/map.py\u001b[0m in \u001b[0;36mfrom_hdulist\u001b[0;34m(cls, hdulist, name, lazy)\u001b[0m\n\u001b[1;32m   1002\u001b[0m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"edisp\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEDispKernelMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medisp_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexposure_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1003\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1004\u001b[0;31m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"edisp\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEDispMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medisp_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexposure_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1005\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1006\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m\"PSF_KERNEL\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mhdulist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/gammapy-0.18.2/lib/python3.7/site-packages/gammapy/irf/edisp_map.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, edisp_map, exposure_map)\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medisp_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexposure_map\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0medisp_map\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"ENERGY_TRUE\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Incorrect energy axis position in input Map\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0medisp_map\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"MIGRA\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Incorrect energy axis position in input Map"
+     ]
+    }
+   ],
    "source": [
     "# Creating the three period datasets\n",
     "\n",
-    "mapdataset_hess1 = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
+    "#mapdataset_hess1 = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
     "\n",
     "filename = \"mapdatasets/mapdataset_hess1.fits.gz\"\n",
     "mapdataset_hess1 = MapDataset.read(path/filename)\n",
     "\n",
     "\n",
-    "mapdataset_hess2 = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
+    "#mapdataset_hess2 = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
     "\n",
     "filename = \"mapdatasets/mapdataset_hess2.fits.gz\"\n",
     "mapdataset_hess2 = MapDataset.read(path/filename)\n",
     "\n",
     "\n",
-    "mapdataset_hess1u = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
+    "#mapdataset_hess1u = MapDataset.create(geom=geom, energy_axis_true=energy_axis_true)\n",
     "\n",
     "filename = \"mapdatasets/mapdataset_hess1u.fits.gz\"\n",
     "mapdataset_hess1u = MapDataset.read(path/filename)"
@@ -200,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelGC,modelG09, model_diff = SkyModels.read(model_name)"
+    "modelGC,modelG09, model_diff = Models.read(model_name)"
    ]
   },
   {
@@ -365,6 +413,25 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "joint_dataset = [mapdataset_hess1, mapdataset_hess2, mapdataset_hess1u]\n",
+    "models_joint =  modelGC.copy() + modelG09.copy()+ model_diff.copy()\n",
+    "\n",
+    "for dataset in joint_dataset:\n",
+    "    \n",
+    "    models = models_joint\n",
+    "    models.append(FoVBackgroundModel(dataset_name=dataset.name))\n",
+    "    \n",
+    "    dataset.models = models_joint\n",
+    "    dataset.fit_mask = fit_mask\n",
+    "    dataset.background_model.parameters['norm'].value = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -377,17 +444,8 @@
    ],
    "source": [
     "%%time\n",
-    "\n",
-    "joint_dataset = [mapdataset_hess1, mapdataset_hess2, mapdataset_hess1u]\n",
-    "models_joint =  modelGC.copy() + modelG09.copy()+ model_diff.copy()\n",
-    "for dataset in joint_dataset:\n",
-    "    dataset.models = models_joint\n",
-    "    dataset.fit_mask = fit_mask\n",
-    "    dataset.background_model.parameters['norm'].value = 1.0\n",
-    "\n",
     "fit_joint = Fit(joint_dataset)\n",
-    "table_joint, result_joint = fit_dataset(fit_joint)\n",
-    "\n"
+    "table_joint, result_joint = fit_dataset(fit_joint)"
    ]
   },
   {
