--- a/notebooks0.18.2/hap-hd/model_definition_hap-hd.ipynb
+++ b/notebooks0.18.2/hap-hd/model_definition_hap-hd.ipynb
@@ -11,18 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.15'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -34,36 +23,50 @@
     "from astropy.convolution import Tophat2DKernel\n",
     "from regions import CircleSkyRegion, RectangleSkyRegion\n",
     "\n",
-    "from gammapy.detect import compute_lima_on_off_image,compute_lima_image # quelle différence entre les deux ?\n",
+    "from astropy.time import Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.18.2'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#from gammapy.detect import compute_lima_on_off_image,compute_lima_image # quelle différence entre les deux ?\n",
+    "\n",
     "from gammapy.data import DataStore\n",
-    "from gammapy.irf import make_mean_psf\n",
+    "from gammapy.irf import PSFKernel\n",
     "from gammapy.maps import Map, MapAxis, WcsGeom\n",
-    "from gammapy.cube import (\n",
+    "from gammapy.datasets import MapDataset, Datasets\n",
+    "from gammapy.makers import (\n",
     "    MapDatasetMaker,\n",
-    "    PSFKernel,\n",
-    "    MapDataset,\n",
-    "    RingBackgroundMaker,\n",
     "    SafeMaskMaker,\n",
-    "    #RingBackgroundEstimator,\n",
+    "    FoVBackgroundMaker,\n",
     ")\n",
+    "from gammapy.modeling import Fit\n",
     "from gammapy.modeling.models import (\n",
     "    SkyModel,\n",
-    "    SkyModels,\n",
     "    BackgroundModel,\n",
     "    PowerLawSpectralModel,\n",
     "    PowerLaw2SpectralModel,\n",
     "    PointSpatialModel,\n",
     "    ExpCutoffPowerLawSpectralModel,\n",
-    "    SkyDiffuseCube,\n",
     "    TemplateSpatialModel,\n",
-    "    GaussianSpatialModel\n",
+    "    GaussianSpatialModel,\n",
+    "    FoVBackgroundModel\n",
     ")\n",
-    "from gammapy.stats import significance, excess # utiles ?\n",
-    "\n",
-    "from gammapy.modeling import Fit\n",
-    "from astropy.time import Time\n",
-    "\n",
-    "src_pos = SkyCoord(359.94, -0.04, unit=\"deg\", frame=\"galactic\")\n",
+    "#from gammapy.stats import significance, excess # utiles ?\n",
     "\n",
     "import gammapy\n",
     "gammapy.__version__"
@@ -71,7 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_pos = SkyCoord(359.94, -0.04, unit=\"deg\", frame=\"galactic\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +91,7 @@
     "\n",
     "# Directory for outputs\n",
     "\n",
-    "path = Path(\"../../../../gammapy_data/GC_variability2020/hap-hd\")\n",
+    "path = Path(\"../../../hess_results/GC_variability_0.18.2/hap-hd\")\n",
     "path.mkdir(exist_ok=True)\n",
     "\n",
     "pathm = Path(path/\"models\")\n",
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +115,14 @@
     "\n",
     "e_bins = 20\n",
     "\n",
-    "energy_axis = MapAxis.from_bounds(\n",
-    "    emin.value, emax.value, e_bins, unit=\"TeV\", name=\"energy\", interp=\"log\"\n",
+    "energy_axis = MapAxis.from_energy_bounds(\n",
+    "    emin.value, emax.value, e_bins, unit=\"TeV\"\n",
     ")\n",
     "geom = WcsGeom.create(\n",
     "    skydir=(0, 0),\n",
     "    binsz=0.02,\n",
     "    width=(10, 8),\n",
-    "    coordsys=\"GAL\",\n",
+    "    frame=\"galactic\",\n",
     "    proj=\"CAR\",\n",
     "    axes=[energy_axis],\n",
     ")\n",
@@ -119,15 +131,15 @@
     "    skydir=(0, 0),\n",
     "    binsz=0.02,\n",
     "    width=(10, 8),\n",
-    "    coordsys=\"GAL\",\n",
+    "    frame=\"galactic\",\n",
     "    proj=\"CAR\",\n",
     ")\n",
     "\n",
     "emintrue, emaxtrue = [0.3,200] * u.TeV\n",
     "e_bins_true = 30\n",
     "\n",
-    "energy_axis_true = MapAxis.from_bounds(\n",
-    "    emintrue.value, emaxtrue.value, e_bins_true, unit=\"TeV\", name=\"energy\", interp=\"log\"\n",
+    "energy_axis_true = MapAxis.from_energy_bounds(\n",
+    "    emintrue.value, emaxtrue.value, e_bins_true, unit=\"TeV\", name=\"energy_true\"\n",
     ")"
    ]
   },
@@ -140,12 +152,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_pos = SkyCoord(359.94, -0.04, unit=\"deg\", frame=\"galactic\")\n",
-    "\n",
     "spatial_model = PointSpatialModel(\n",
     "            lon_0 = src_pos.l, \n",
     "            lat_0 = src_pos.b, \n",
@@ -172,12 +182,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_pos = SkyCoord(359.94, -0.04, unit=\"deg\", frame=\"galactic\")\n",
-    "\n",
     "spatial_model = PointSpatialModel(\n",
     "            lon_0 = src_pos.l, \n",
     "            lat_0 = src_pos.b, \n",
@@ -212,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,18 +332,16 @@
     "            name = \"DE_full\")\n",
     "\n",
     "model_diff.parameters[\"index\"].frozen = True\n",
-    "model_diff.parameters[\"norm\"].frozen = True\n",
+    "#model_diff.parameters[\"norm\"].frozen = True\n",
     "model_diff.parameters[\"amplitude\"].frozen = False\n",
     "model_diff.parameters[\"reference\"].frozen = True\n",
     "\n",
-    "\n",
-    "model_diff.spatial_model.filename = str(pathm/\"map_DE_spatial_model\")\n",
-    "\n"
+    "model_diff.spatial_model.filename = str(pathm/\"map_DE_spatial_model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,11 +362,27 @@
     "\n",
     "model_diff_cutoff.parameters[\"index\"].frozen = False\n",
     "model_diff_cutoff.parameters[\"lambda_\"].frozen = False\n",
-    "model_diff_cutoff.parameters[\"norm\"].frozen = True\n",
+    "#model_diff_cutoff.parameters[\"norm\"].frozen = True\n",
     "model_diff_cutoff.parameters[\"amplitude\"].frozen = False\n",
     "model_diff_cutoff.parameters[\"reference\"].frozen = True\n",
     "\n",
     "model_diff_cutoff.spatial_model.filename = str(pathm/\"map_DE_spatial_model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background model (post 0.18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# il faut le/les datasets pour créer cet objet"
    ]
   },
   {
@@ -372,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
