--- a/notebooks0.18.2/hap-hd/Flux_points_light_curves_HAP-hd.ipynb
+++ b/notebooks0.18.2/hap-hd/Flux_points_light_curves_HAP-hd.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "model_name = pathmo/\"models_template_2cutoff.yaml\" \n",
     "\n",
-    "pathres = Path(path/\"1cutoff_time_analysis_bis\")\n",
+    "pathres = Path(path/\"time_analysis_annee_par_annee_bis\")\n",
     "pathres.mkdir(exist_ok=True)"
    ]
   },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,13 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING: Model is linear in parameters; consider using linear fitting methods. [astropy.modeling.fitting]\n",
       "WARNING: Model is linear in parameters; consider using linear fitting methods. [astropy.modeling.fitting]\n",
       "WARNING: Model is linear in parameters; consider using linear fitting methods. [astropy.modeling.fitting]\n",
       "WARNING: Model is linear in parameters; consider using linear fitting methods. [astropy.modeling.fitting]\n"
@@ -486,54 +487,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<i>Row index=3</i>\n",
-       "<table id=\"table140676135098352\">\n",
-       "<thead><tr><th>counts [1]</th><th>e_ref</th><th>e_min</th><th>e_max</th><th>ref_dnde</th><th>ref_flux</th><th>ref_eflux</th><th>ref_e2dnde</th><th>norm</th><th>stat</th><th>success</th><th>norm_err</th><th>ts</th><th>norm_errp</th><th>norm_errn</th><th>norm_ul</th><th>norm_scan [11]</th><th>stat_scan [11]</th><th>sqrt_ts</th><th>dnde</th><th>dnde_ul</th><th>dnde_err</th><th>dnde_errp</th><th>dnde_errn</th></tr></thead>\n",
-       "<thead><tr><th></th><th>TeV</th><th>TeV</th><th>TeV</th><th>1 / (cm2 s TeV)</th><th>1 / (cm2 s)</th><th>TeV / (cm2 s)</th><th>TeV / (cm2 s)</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>1 / (cm2 s TeV)</th><th>1 / (cm2 s TeV)</th><th>1 / (cm2 s TeV)</th><th>1 / (cm2 s TeV)</th><th>1 / (cm2 s TeV)</th></tr></thead>\n",
-       "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>125</td><td>7.071067910277233</td><td>5.425421714782715</td><td>9.215873718261717</td><td>3.161254843595759e-14</td><td>1.215104325028236e-13</td><td>8.344460053436959e-13</td><td>1.580627465794721e-12</td><td>-56.06596413452644</td><td>1674.2892681165408</td><td>True</td><td>36.538369343037715</td><td>136.43363537270307</td><td>29.105143693228644</td><td>38.323012694497905</td><td>-20.433504123869312</td><td>0.20000000000000004 .. 5.000000000000001</td><td>1807.779020379651 .. 1849.1632005854492</td><td>-11.680480956394863</td><td>-1.7723880068113783e-12</td><td>-6.459551388321578e-13</td><td>1.1550709706276877e-12</td><td>9.200877647376961e-13</td><td>1.2114880950166327e-12</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Row index=3>\n",
-       "counts [1]       e_ref             e_min             e_max              ref_dnde              ref_flux             ref_eflux             ref_e2dnde             norm               stat        success      norm_err              ts             norm_errp          norm_errn            norm_ul                    norm_scan [11]                           stat_scan [11]                   sqrt_ts                 dnde                 dnde_ul                dnde_err              dnde_errp             dnde_errn       \n",
-       "                  TeV               TeV               TeV           1 / (cm2 s TeV)         1 / (cm2 s)          TeV / (cm2 s)         TeV / (cm2 s)                                                                                                                                                                                                                                                            1 / (cm2 s TeV)        1 / (cm2 s TeV)        1 / (cm2 s TeV)        1 / (cm2 s TeV)       1 / (cm2 s TeV)    \n",
-       "  int64         float64           float64           float64             float64               float64               float64               float64             float64            float64         bool       float64            float64            float64            float64             float64                       float64                                  float64                       float64               float64                float64                float64                float64               float64        \n",
-       "---------- ----------------- ----------------- ----------------- --------------------- --------------------- --------------------- --------------------- ------------------ ------------------ ------- ------------------ ------------------ ------------------ ------------------ ------------------- ---------------------------------------- --------------------------------------- ------------------- ----------------------- ---------------------- ---------------------- --------------------- ----------------------\n",
-       "       125 7.071067910277233 5.425421714782715 9.215873718261717 3.161254843595759e-14 1.215104325028236e-13 8.344460053436959e-13 1.580627465794721e-12 -56.06596413452644 1674.2892681165408    True 36.538369343037715 136.43363537270307 29.105143693228644 38.323012694497905 -20.433504123869312 0.20000000000000004 .. 5.000000000000001 1807.779020379651 .. 1849.1632005854492 -11.680480956394863 -1.7723880068113783e-12 -6.459551388321578e-13 1.1550709706276877e-12 9.200877647376961e-13 1.2114880950166327e-12"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flux_years[3][5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(y)"
    ]
