--- a/notebooks0.18.2/hap-fr/simu_variability_hap-fr.ipynb
+++ b/notebooks0.18.2/hap-fr/simu_variability_hap-fr.ipynb
@@ -236,7 +236,9 @@
     "modelGCnaive, modeldiffnaive = modelGC.copy(), modeldiff.copy()\n",
     "\n",
     "modelGCnaive.parameters[\"amplitude\"].value = 3e-12\n",
-    "modeldiffnaive.parameters[\"amplitude\"].value = 5e-12"
+    "modeldiffnaive.parameters[\"amplitude\"].value = 5e-12\n",
+    "\n",
+    "# faire varier les modèles naifs"
    ]
   },
   {
@@ -252,13 +254,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_region = RectangleSkyRegion(src_pos, 4*u.deg, 2*u.deg)\n",
+    "fit_region = RectangleSkyRegion(src_pos, 4*u.deg, 3*u.deg)\n",
     "\n",
-    "J1745_303_region = CircleSkyRegion(SkyCoord(358.6,  -0.6, unit=\"deg\", frame=\"galactic\"), 0.5 * u.deg)\n",
+    "J1745_303_region = CircleSkyRegion(SkyCoord(358.6,  -0.6, unit=\"deg\", frame=\"galactic\"), 0.75 * u.deg)\n",
     "\n",
-    "fit_mask = geom.region_mask([fit_region])*geom.region_mask([J1745_303_region] , inside=False)\n",
+    "mask_fit = geom.region_mask([fit_region])*geom.region_mask([J1745_303_region] , inside=False)\n",
     "\n",
-    "fit_mask = Map.from_geom(geom, data=fit_mask)"
+    "mask_fit = Map.from_geom(geom, data=mask_fit)"
    ]
   },
   {
@@ -488,9 +490,11 @@
     "        datasets_year[f'map_{year}'].fake() # ça renvoie les mêmes résultats à chaque fois...\n",
     "        \n",
     "        # on remet les modèles\n",
-    "        datasets_year[f'map_{year}'].fit_mask = fit_mask\n",
-    "        bkg_model = FoVBackgroundModel(dataset_name=f\"map_{year}\")\n",
-    "        datasets_year[f'map_{year}'].models =  [modelGCnaive.copy(),modelG09.copy(),modeldiffnaive.copy(),bkg_model]\n",
+    "        datasets_year[f'map_{year}'].mask_fit = mask_fit\n",
+    "        bkg_model = FoVBackgroundModel(dataset_name=f\"map_{year}\") # changer le modèle\n",
+    "        \n",
+    "        modelGCnaive.spectral_model.parametes['amplitude'].value = iter*1e-\n",
+    "        datasets_year[f'map_{year}'].models =  [modelGCnaive.copy(), modelG09.copy(), modeldiffnaive.copy(),bkg_model]\n",
     "\n",
     "        # on fait le fit\n",
     "        table, result = fit_dataset(datasets_year[f\"map_{year}\"])\n",
@@ -506,7 +510,12 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
