--- a/notebooks0.18.2/hap-fr/model_definition_hap-fr.ipynb
+++ b/notebooks0.18.2/hap-fr/model_definition_hap-fr.ipynb
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelling the diffuse emission"
+    "## Modelling the diffuse emission 3in1"
    ]
   },
   {
@@ -367,6 +367,51 @@
     "model_diff_cutoff.parameters[\"reference\"].frozen = True\n",
     "\n",
     "model_diff_cutoff.spatial_model.filename = str(pathm/\"map_DE_spatial_model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diffuse model (3 separate components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GaussianSpatialModel attention pour la composante étendue et les deux sigma\n",
+    "\n",
+    "CSmap = Map.read(\"$GAMMAPY_DATA/CS_reproj.fits\") \n",
+    "\n",
+    "coords = CSmap.geom.get_coord()\n",
+    "lon = coords.skycoord.l.wrap_at(180*u.deg).to_value('deg')\n",
+    "factor = np.exp(-0.5*(lon)**2/1.11**2) #1.11 quand on a les 3 composantes\n",
+    "CSmap.data*=factor\n",
+    "\n",
+    "CSmap.data = (CSmap.data > 10.0) * CSmap.data\n",
+    "\n",
+    "solid_angle_tot = CSmap.geom.solid_angle().sum()\n",
+    "\n",
+    "DGC = TemplateSpatialModel(CSmap) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.11 deg\", frame='galactic') #sigma de 0.11\n",
+    "\n",
+    "LSC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.97 deg\", e=np.sqrt(1-(0.22/0.97)**2), phi=\"90 deg\", frame='galactic') \n",
+    "#sigma1 de 0.97 et sigma2 de 0.22, à transformer en sigma et excentricité\n",
+    "\n",
+    "\n",
+    "# in 0.15, saving a model use TemplateSpatialModel loses the base map used as a template, so we need to save it and reference it later in the associated .yaml file\n",
+    "carte.write(path/\"models/map_DE_spatial_model\", overwrite=True)"
    ]
   },
   {
