--- a/notebooks0.18.2/hap-fr/model_definition_hap-fr.ipynb
+++ b/notebooks0.18.2/hap-fr/model_definition_hap-fr.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "'0.18.2'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,9 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Invalid value BUNIT='Count' in FITS header. Setting empty unit.\n"
+     ]
+    }
+   ],
    "source": [
     "# GaussianSpatialModel attention pour la composante étendue et les deux sigma\n",
     "\n",
@@ -395,23 +403,51 @@
     "\n",
     "solid_angle_tot = CSmap.geom.solid_angle().sum()\n",
     "\n",
-    "DGC = TemplateSpatialModel(CSmap) "
+    "DGC = TemplateSpatialModel(CSmap)\n",
+    "\n",
+    "spectral_model = ExpCutoffPowerLawSpectralModel(\n",
+    "        index=2.3, \n",
+    "        amplitude=3e-12 * u.Unit(\"cm-2 s-1 TeV-1\"), \n",
+    "        reference=1 * u.TeV , \n",
+    "        lambda_= 1/(10*u.TeV) , \n",
+    "        alpha= 1)\n",
+    "\n",
+    "\n",
+    "model_diff_DGC_cutoff = SkyModel(\n",
+    "            spatial_model = DGC, \n",
+    "            spectral_model = spectral_model, \n",
+    "            name = \"DE_DGC\")\n",
+    "\n",
+    "model_diff_DGC_cutoff.spatial_model.filename = str(pathm/\"map_DE_spatial_model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.11 deg\", frame='galactic') #sigma de 0.11\n",
+    "CC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.11 deg\", frame='galactic') \n",
     "\n",
+    "spectral_model = ExpCutoffPowerLawSpectralModel(\n",
+    "        index=2.3, \n",
+    "        amplitude=3e-12 * u.Unit(\"cm-2 s-1 TeV-1\"), \n",
+    "        reference=1 * u.TeV , \n",
+    "        lambda_= 0/(1*u.TeV) , \n",
+    "        alpha= 1)\n",
+    "\n",
+    "model_diff_CC_cutoff = SkyModel(\n",
+    "            spatial_model = CC, \n",
+    "            spectral_model = spectral_model, \n",
+    "            name = \"DE_CC\")\n",
+    "            \n",
     "LSC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.97 deg\", e=np.sqrt(1-(0.22/0.97)**2), phi=\"90 deg\", frame='galactic') \n",
-    "#sigma1 de 0.97 et sigma2 de 0.22, à transformer en sigma et excentricité\n",
     "\n",
     "\n",
-    "# in 0.15, saving a model use TemplateSpatialModel loses the base map used as a template, so we need to save it and reference it later in the associated .yaml file\n",
-    "carte.write(path/\"models/map_DE_spatial_model\", overwrite=True)"
+    "model_diff_LSC_cutoff = SkyModel(\n",
+    "            spatial_model = LSC, \n",
+    "            spectral_model = spectral_model, \n",
+    "            name = \"DE_LSC\")"
    ]
   },
   {
@@ -423,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,6 +517,17 @@
    "source": [
     "models = modelCG_cutoff.copy() + modelG09.copy()+ model_diff_cutoff.copy()\n",
     "name = \"models_template_2cutoff.yaml\"\n",
+    "models.write(pathm/name, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = modelCG_cutoff.copy() + modelG09.copy()+ model_diff_DGC_cutoff.copy() + model_diff_CC_cutoff.copy() + model_diff_LSC_cutoff.copy()\n",
+    "name = \"models_template_2cutoff_DE3comp.yaml\"\n",
     "models.write(pathm/name, overwrite=True)"
    ]
   },
