--- a/notebooks0.18.2/hap-hd/model_definition_hap-hd.ipynb
+++ b/notebooks0.18.2/hap-hd/model_definition_hap-hd.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "'0.18.2'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,12 +373,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Diffuse model (3 separate components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Invalid value BUNIT='Count' in FITS header. Setting empty unit.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GaussianSpatialModel attention pour la composante étendue et les deux sigma\n",
+    "\n",
+    "CSmap = Map.read(\"$GAMMAPY_DATA/CS_reproj.fits\") \n",
+    "\n",
+    "coords = CSmap.geom.get_coord()\n",
+    "lon = coords.skycoord.l.wrap_at(180*u.deg).to_value('deg')\n",
+    "factor = np.exp(-0.5*(lon)**2/1.11**2) #1.11 quand on a les 3 composantes\n",
+    "CSmap.data*=factor\n",
+    "\n",
+    "CSmap.data = (CSmap.data > 10.0) * CSmap.data\n",
+    "\n",
+    "solid_angle_tot = CSmap.geom.solid_angle().sum()\n",
+    "\n",
+    "DGC = TemplateSpatialModel(CSmap)\n",
+    "\n",
+    "spectral_model = ExpCutoffPowerLawSpectralModel(\n",
+    "        index=2.3, \n",
+    "        amplitude=3e-12 * u.Unit(\"cm-2 s-1 TeV-1\"), \n",
+    "        reference=1 * u.TeV , \n",
+    "        lambda_= 1/(10*u.TeV) , \n",
+    "        alpha= 1)\n",
+    "\n",
+    "\n",
+    "model_diff_DGC_cutoff = SkyModel(\n",
+    "            spatial_model = DGC, \n",
+    "            spectral_model = spectral_model, \n",
+    "            name = \"DE_DGC\")\n",
+    "\n",
+    "model_diff_DGC_cutoff.spatial_model.filename = str(pathm/\"map_DE_spatial_model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.11 deg\", frame='galactic') \n",
+    "\n",
+    "spectral_model = ExpCutoffPowerLawSpectralModel(\n",
+    "        index=2.3, \n",
+    "        amplitude=3e-12 * u.Unit(\"cm-2 s-1 TeV-1\"), \n",
+    "        reference=1 * u.TeV , \n",
+    "        lambda_= 0/(1*u.TeV) , \n",
+    "        alpha= 1)\n",
+    "\n",
+    "model_diff_CC_cutoff = SkyModel(\n",
+    "            spatial_model = CC, \n",
+    "            spectral_model = spectral_model, \n",
+    "            name = \"DE_CC\")\n",
+    "            \n",
+    "LSC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.97 deg\", e=np.sqrt(1-(0.22/0.97)**2), phi=\"90 deg\", frame='galactic') \n",
+    "\n",
+    "\n",
+    "model_diff_LSC_cutoff = SkyModel(\n",
+    "            spatial_model = LSC, \n",
+    "            spectral_model = spectral_model, \n",
+    "            name = \"DE_LSC\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Background model (post 0.18)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,12 +511,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "models = modelCG_cutoff.copy() + modelG09.copy()+ model_diff_cutoff.copy()\n",
     "name = \"models_template_2cutoff.yaml\"\n",
+    "models.write(pathm/name, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = modelCG_cutoff.copy() + modelG09.copy()+ model_diff_DGC_cutoff.copy() + model_diff_CC_cutoff.copy() + model_diff_LSC_cutoff.copy()\n",
+    "name = \"models_template_2cutoff_DE3comp.yaml\"\n",
     "models.write(pathm/name, overwrite=True)"
    ]
   },
